# signalizing

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/signalizing/conv2d/: core.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/signalizing/conv2d/: core.cpp
